# transfer-files

./: docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/uploads/: 0518be7e-779b-4fcd-a331-936672b7ce3d  a3307914-2e65-4d6e-9ba1-50bdaa4f0454  ef314c33-d5dd-4847-b3c5-114bf936cb44
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/recieve/: page.tsx
frontend/components/: AboutUs.tsx  Banner.tsx  Download.tsx  Faq.tsx  FileShare.tsx  Footer.tsx  Navbar.tsx
