[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-multipart = "0.4"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
actix-cors = "0.6"  # CORS support
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }  # PostgreSQL support
